--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,8 +160,8 @@ body {
   color: black;
 }
 
-#features img {
-  height: 220px;
+#features-image {
+  height: 250px !important;
   padding: 10px 50px;
   object-fit: contain;
 }
