--- a/styles/component-holder.module.css
+++ b/styles/component-holder.module.css
@@ -56,90 +56,26 @@
 .uploaderContainer {
   width: 700px;
   background-color: gainsboro;
-  height: auto;
   padding: 20px;
   border-radius: 15px;
-  margin-top: 100px;
-  margin-bottom: 60px;
+  margin: 80px auto 60px;
   text-align: center;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
   font-size: 24px;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-shadow: 10px 5px 5px rgb(0, 0, 0);
   opacity: 0;
   transform: translateY(50px);
   animation: fadeInUp 0.8s ease-out forwards;
   animation-delay: 0.6s;
-  box-shadow: 10px 5px 5px rgb(0, 0, 0);
+  transition: transform 0.3s ease, color 0.3s ease;
 }
 
-.fileInput {
-  display: none;
-}
-
-.fileLabel {
-  background-color: rgb(37, 66, 179);
-  color: white;
-  padding: 8px 12px;
-  border-radius: 5px;
-  cursor: pointer;
-  display: inline-block;
-  margin: 10px;
-}
-
-.placeholder {
-  color: gray;
-  margin-top: 10px;
-}
-
-.fileList {
-  list-style: none;
-  padding: 0;
-  margin-top: 10px;
-}
-
-.fileItem {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: rgb(168, 167, 167);
-  padding: 8px;
-  margin: 15px;
-  border-radius: 10px;
-  box-shadow: 10px 5px 5px rgb(0, 0, 0);
-}
-
-.deleteButton {
-  background: rgb(156, 1, 1);
-  color: white;
-  border: none;
-  border-radius: 10px;
-  margin: 10px;
-  padding: 4px 8px;
-  cursor: pointer;
-}
-
-.controls {
-  display: flex;
-  gap: 1rem;
-  margin-bottom: 1rem;
-  align-items: center;
-}
-
-.sortSelect {
+.uploaderContainer:hover {
+  transform: scale(1.05);
   color: black;
-  padding: 0.2rem;
-  border-radius: 4px;
-  background-color: white;
-  cursor: pointer;
-}
-
-.fileInfo {
-  display: block;
-  font-size: 0.8rem;
-  color: #666;
-  margin-top: 0.2rem;
 }
 
 .componentTitle {
@@ -220,6 +156,7 @@
 }
 
 .formContainer {
+  margin-top: 10rem;
   margin-bottom: 5rem;
   text-align: center;
   align-items: center;
@@ -311,6 +248,13 @@
   width: 90%;
   padding: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.submitBtn:hover {
+  background-color: goldenrod;
+  color: black;
+  border:2px solid rgb(5, 47, 5);
 }
 
 .addBtn {
@@ -361,7 +305,6 @@
   background-color: goldenrod;
 }
 
-/* Add these styles to your component-holder.module.css */
 .resultsContainer {
   margin-bottom: 3rem;
   margin-top: 2rem;
