--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,10 +160,18 @@ body {
   color: black;
 }
 
-#features-image {
-  height: 250px !important;
-  padding: 10px 50px;
+.feature-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  width: 200px;
+}
+
+.feature-image {
   object-fit: contain;
+  max-width: 80%;
+  max-height: 100%;
 }
 
 /* Mobile Responsive Styles */
